Render Image for composited scene shows inconsistent results #95338

Closed
opened 2022-01-30 20:44:23 +01:00 by Giant Squid · 26 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GEFORCE 1660 GTX

Blender Version
Broken: 3.0.0, Date: 2021-12-02 18:35
Worked: Unknown

Short description of error
A composite of two scenes will produce inconsistent results across F12 Render Image runs. Basically, if you change nothing, and simply hit F12 to bring up the "Render Result" window, you will sometimes see the expected result (two scenes composited together), and sometimes just one of the scenes without the other.

My project contains 3 simple scenes. One of the scenes renders text. Another modifies a mesh using geometry nodes. And the third scene composites the other two via compositor nodes. The compositing nodes are basic and consist of:

2 Render Layers, one of for each scene, which both feed their image into:

  • Alpha Over node, which feeds its image into:
    - > Compositor node (Use alpha checked)
    - > Viewer node (Use alpha checked)

With this basic setup, you can now press F12 multiple times to bring up the Render Result window.

Observe that the contents of this window will vary across the renders. This is unexpected. Should always be the same.

EXPECTED_Render_Has_Both_Scenes.png UNEXPECTED_Render_Missing_Text.png

Exact steps for others to reproduce the error

  • Open attached project
  • Make sure the "Compositor Scene" is selected
  • Hit F12 to render image. OBSERVE: Render Result window may not contain both scenes.
  • Repeat step 3 until you hit upon this case.
    #95338.blend
**System Information** Operating system: Windows 10 Graphics card: NVIDIA GEFORCE 1660 GTX **Blender Version** Broken: 3.0.0, Date: 2021-12-02 18:35 Worked: Unknown **Short description of error** A composite of two scenes will produce inconsistent results across F12 Render Image runs. Basically, if you change nothing, and simply hit F12 to bring up the "Render Result" window, you will sometimes see the expected result (two scenes composited together), and sometimes just one of the scenes without the other. My project contains 3 simple scenes. One of the scenes renders text. Another modifies a mesh using geometry nodes. And the third scene composites the other two via compositor nodes. The compositing nodes are basic and consist of: 2 Render Layers, one of for each scene, which both feed their image into: - > Alpha Over node, which feeds its image into: - > Compositor node (Use alpha checked) - > Viewer node (Use alpha checked) With this basic setup, you can now press F12 multiple times to bring up the Render Result window. Observe that the contents of this window will vary across the renders. This is unexpected. Should always be the same. |![EXPECTED_Render_Has_Both_Scenes.png](https://archive.blender.org/developer/F12835994/EXPECTED_Render_Has_Both_Scenes.png)|![UNEXPECTED_Render_Missing_Text.png](https://archive.blender.org/developer/F12835996/UNEXPECTED_Render_Missing_Text.png) | -- | -- | **Exact steps for others to reproduce the error** - Open attached project - Make sure the "Compositor Scene" is selected - Hit F12 to render image. OBSERVE: Render Result window may not contain both scenes. - Repeat step 3 until you hit upon this case. [#95338.blend](https://archive.blender.org/developer/F12835993/T95338.blend)
Author

Added subscriber: @giantsquid

Added subscriber: @giantsquid
Author

REPRO STEPS USING SAMPLE PROJECT:

  1. Open attached project
  2. Make sure the "Compositor Scene" is selected
  3. Hit F12 to render image

OBSERVE: Render Result window may not contain both scenes.

  1. Repeat step 3 until you hit upon this case.

See attached screenshots demonstrating the two results I get when hitting F12 several times.

REPRO STEPS USING SAMPLE PROJECT: 1. Open attached project 2. Make sure the "Compositor Scene" is selected 3. Hit F12 to render image OBSERVE: Render Result window may not contain both scenes. 4. Repeat step 3 until you hit upon this case. See attached screenshots demonstrating the two results I get when hitting F12 several times.
Author
![EXPECTED_Render_Has_Both_Scenes.png](https://archive.blender.org/developer/F12835994/EXPECTED_Render_Has_Both_Scenes.png) ![UNEXPECTED_Render_Missing_Text.png](https://archive.blender.org/developer/F12835996/UNEXPECTED_Render_Missing_Text.png) [#95338.blend](https://archive.blender.org/developer/F12835993/T95338.blend)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I edited the report description to make it easier to understand, but I can't reproduce the problem no matter how many times I press F12 to render.

Many bugs are fixed between the official releases. Please try the latest development snapshot of blender: https://builder.blender.org/download

I edited the report description to make it easier to understand, but I can't reproduce the problem no matter how many times I press F12 to render. Many bugs are fixed between the official releases. Please try the latest development snapshot of blender: https://builder.blender.org/download
Author

I can also repro this using 3.0.1, for what it's worth.

Took me 6-10 F12 runs to reproduce the issue, but it still happens.

I can also repro this using 3.0.1, for what it's worth. Took me 6-10 F12 runs to reproduce the issue, but it still happens.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce this with eevee and cycles.

I can reproduce this with eevee and cycles.

Added subscriber: @brecht

Added subscriber: @brecht

So far unable to reproduce this but sounds like a bug.

So far unable to reproduce this but sounds like a bug.

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I must have checked only with 3.0 (~5% success rate), re-checking now and I can't reproduce in 3.2

@giantsquid Please check if this still happens with latest alpha build from https://builder.blender.org/download/daily/. If it does, please report how often it happens.

I must have checked only with 3.0 (~5% success rate), re-checking now and I can't reproduce in 3.2 @giantsquid Please check if this still happens with latest alpha build from https://builder.blender.org/download/daily/. If it does, please report how often it happens.
Author

This still repros with Blender 3.1 Beta, appears to have about the same error rate.

This still repros with Blender 3.1 Beta, appears to have about the same error rate.
Author

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @michael64

Added subscriber: @michael64

I bisected this down to 507a4deef1 which due to its small size can be neatly reverted on master for further debugging.

I bisected this down to 507a4deef1 which due to its small size can be neatly reverted on master for further debugging.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

In #95338#1309925, @michael64 wrote:
I bisected this down to 507a4deef1 which due to its small size can be neatly reverted on master for further debugging.

Thx! But how can this report from Jan 30 be caused by a commit from Feb 10?

> In #95338#1309925, @michael64 wrote: > I bisected this down to 507a4deef1 which due to its small size can be neatly reverted on master for further debugging. Thx! But how can this report from Jan 30 be caused by a commit from Feb 10?

When loading the the scene with 2.83.19 the white line is only rendered as a white plane but at least the green text is rendered every time.
With 2.93.0 the white line is never rendered and the green text only sometimes.
It seems like this error first appeared between these two versions and maybe as a side effect of some changes the error went away until 507a4deef1 brought it back to life.

Version 2.92.0 is very deterministic in that it crashes immediately when I hit F12 but this could be a completely different error.
In Version 2.91.2 the green text is not shown the first 33 or so renders and then seemingly every time.
So, this issue looks interesting in a funny kind of way and I'll investigate a bit more.

When loading the the scene with 2.83.19 the white line is only rendered as a white plane but at least the green text is rendered every time. With 2.93.0 the white line is never rendered and the green text only sometimes. It seems like this error first appeared between these two versions and maybe as a side effect of some changes the error went away until 507a4deef1 brought it back to life. Version 2.92.0 is very deterministic in that it crashes immediately when I hit F12 but this could be a completely different error. In Version 2.91.2 the green text is not shown the first 33 or so renders and then seemingly every time. So, this issue looks interesting in a funny kind of way and I'll investigate a bit more.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thx again @michael64 .
Think this can be confirmed after all

Thx again @michael64 . Think this can be confirmed after all

507a4deef1 may have increased reproduction rate. before I wasn't able to confirm in 3.2, now I can confirm quite reliably (~20% success rate).
When I pan image in editor, it suddenly updates. It does not update with 3.1 34d424fd64. So issue was definitely there before 507a4deef1

507a4deef1 may have increased reproduction rate. before I wasn't able to confirm in 3.2, now I can confirm quite reliably (~20% success rate). When I pan image in editor, it suddenly updates. It does not update with 3.1 34d424fd64. So issue was definitely there before 507a4deef1

The error can be reproduced on Mac, Windows and Linux with 2.91.0 as the earliest release while 2.90.1 still worked.
Because of the old dependencies I could only build and bisect this on Linux and it looks like it was introduced in 4212b6528a in which the "New Drawing" was enabled by default.

The error can be reproduced on Mac, Windows and Linux with 2.91.0 as the earliest release while 2.90.1 still worked. Because of the old dependencies I could only build and bisect this on Linux and it looks like it was introduced in 4212b6528a in which the "New Drawing" was enabled by default.

This issue was referenced by b04d42022f

This issue was referenced by b04d42022f7816dc1cfbf8d4e66733bd78eebbc9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-02-18 20:06:47 +01:00
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#95338
No description provided.